--- a/lab2/ex2.ipynb
+++ b/lab2/ex2.ipynb
@@ -2,94 +2,174 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7fddd175",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#imports\n",
+    "\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import csv "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6123054e",
+   "execution_count": 25,
+   "id": "910acbcf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hac_two_reps(X, return_history=True):\n",
-    "    Xw = np.array(X, dtype=float).copy()\n",
-    "    history = [Xw.copy()] if return_history else None\n",
+    "# parâmetros enunciado\n",
     "\n",
-    "    while len(Xw) > 2:\n",
-    "        diff = Xw[:, None, :] - Xw[None, :, :]\n",
-    "        D = np.sqrt(np.sum(diff**2, axis=2))\n",
-    "        np.fill_diagonal(D, np.inf)\n",
-    "        i, j = np.unravel_index(np.argmin(D), D.shape)\n",
-    "        if i > j:  # manter i<j\n",
-    "            i, j = j, i\n",
+    "alpha = 1e-4\n",
+    "epochs = 10\n",
     "\n",
-    "        m = (Xw[i] + Xw[j]) / 2.0            # média dos dois\n",
-    "        Xw = np.delete(Xw, j, axis=0)        # remove j\n",
-    "        Xw[i] = m                            # substitui i pela média\n",
+    "    # distância Euclidiana\n",
     "\n",
-    "        if return_history:\n",
-    "            history.append(Xw.copy())\n",
+    "def closer_to_r1(p, r1, r2):\n",
     "\n",
-    "    return (Xw, history) if return_history else (Xw, None)"
+    "    return np.linalg.norm(p - r1) <= np.linalg.norm(p - r2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "67acf248",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %% correr\n",
-    "reps, hist = hac_two_reps(X, return_history=True)\n",
-    "r1, r2 = reps\n",
-    "print(\"Representantes finais:\")\n",
-    "print(\"r1 =\", r1)\n",
-    "print(\"r2 =\", r2)"
+    "#pseudo codigo para 1 epoca dado no enunciado\n",
+    "def one_epoch(X, r1, r2, alpha):\n",
+    "\n",
+    "    X = np.asarray(X, dtype=float)[:, :2]\n",
+    "    updates_i = []\n",
+    "\n",
+    "    for x in X:\n",
+    "        # distâncias euclidianas (calculadas aqui, sem helper externo)\n",
+    "        d1 = np.linalg.norm(x - r1)\n",
+    "        d2 = np.linalg.norm(x - r2)\n",
+    "\n",
+    "        if d1 <= d2:\n",
+    "            r1 = (1.0 - alpha) * r1 + alpha * x  # r1 <- (1-α)r1 + αx\n",
+    "            which = 1\n",
+    "        else:\n",
+    "            r2 = (1.0 - alpha) * r2 + alpha * x  # r2 <- (1-α)r2 + αx\n",
+    "            which = 2\n",
+    "\n",
+    "        updates_i.append([which, r1[0], r1[1], r2[0], r2[1]])  # (i)\n",
+    "\n",
+    "    return r1, r2, updates_i\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
+   "id": "585ea441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Corre 10 épocas seguindo o pseudocódigo dado\n",
+    "\n",
+    "def run_10_epochs(X, r1, r2, alpha=alpha, epochs=epochs):\n",
+    "\n",
+    "#Guarda\n",
+    "    X = np.asarray(X, dtype=float)\n",
+    "    assert X.ndim == 2 and X.shape[1] >= 2, \"X tem de ser Nx2 (ou Nx≥2).\"\n",
+    "    X = X[:, :2]\n",
+    "\n",
+    "    history_i  = []  # (i)\n",
+    "    summary_ii = []  # (ii)\n",
+    "\n",
+    "    for ep in range(1, epochs + 1):\n",
+    "        r1, r2, updates_i = one_epoch(X, r1, r2, alpha)\n",
+    "        for k, (which, a, b, c, d) in enumerate(updates_i, start=1):\n",
+    "            history_i.append([ep, k, which, a, b, c, d])\n",
+    "        summary_ii.append([ep, r1[0], r1[1], r2[0], r2[1]])\n",
+    "    return r1, r2, history_i, summary_ii\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "2236431b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# %% plot\u001b[39;00m\n\u001b[32m      3\u001b[39m plt.figure()\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m plt.scatter(\u001b[43mX\u001b[49m[:,\u001b[32m0\u001b[39m], X[:,\u001b[32m1\u001b[39m], s=\u001b[32m12\u001b[39m, label=\u001b[33m\"\u001b[39m\u001b[33mdados\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m plt.scatter([r1[\u001b[32m0\u001b[39m], r2[\u001b[32m0\u001b[39m]], [r1[\u001b[32m1\u001b[39m], r2[\u001b[32m1\u001b[39m]], s=\u001b[32m140\u001b[39m, marker=\u001b[33m'\u001b[39m\u001b[33mX\u001b[39m\u001b[33m'\u001b[39m, label=\u001b[33m\"\u001b[39m\u001b[33mreps finais\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m plt.title(\u001b[33m\"\u001b[39m\u001b[33mEx.2 — Fusão sucessiva até restarem 2 representantes\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'X' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r1_final: [0.0009991 0.       ]  | r2_final: [9.99100525e-04 1.00000000e+00]\n",
+      "nº registos (i): 40\n",
+      "nº linhas (ii): 10\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "# %% plot\n",
+    "X = [[0,0],[0,1],[1,0],[1,1]] \n",
+    "X_np = np.asarray(X, dtype=float)\n",
     "\n",
-    "plt.figure()\n",
-    "plt.scatter(X[:,0], X[:,1], s=12, label=\"dados\")\n",
-    "plt.scatter([r1[0], r2[0]], [r1[1], r2[1]], s=140, marker='X', label=\"reps finais\")\n",
-    "plt.title(\"Ex.2 — Fusão sucessiva até restarem 2 representantes\")\n",
-    "plt.axis('equal'); plt.legend(); plt.show()"
+    "# r1 e r2 iniciais: para não depender de aleatório, uso os DOIS primeiros pontos do próprio X\n",
+    "r1_init = X_np[0].copy()\n",
+    "r2_init = X_np[1].copy()\n",
+    "\n",
+    "r1_final, r2_final, updates_history, epoch_summary = run_10_epochs(X_np, r1_init, r2_init, alpha, epochs)\n",
+    "\n",
+    "print(\"r1_final:\", r1_final, \" | r2_final:\", r2_final)\n",
+    "print(\"nº registos (i):\", len(updates_history))  # deve ser 10 * len(X) = 40\n",
+    "print(\"nº linhas (ii):\", len(epoch_summary))     # deve ser 10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8c9f0ec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primeiras 8 atualizações (i): [epoch, idx, which, r1x, r1y, r2x, r2y]\n",
+      "[1, 1, 1, np.float64(0.0), np.float64(0.0), np.float64(0.0), np.float64(1.0)]\n",
+      "[1, 2, 2, np.float64(0.0), np.float64(0.0), np.float64(0.0), np.float64(1.0)]\n",
+      "[1, 3, 1, np.float64(0.0001), np.float64(0.0), np.float64(0.0), np.float64(1.0)]\n",
+      "[1, 4, 2, np.float64(0.0001), np.float64(0.0), np.float64(0.0001), np.float64(1.0)]\n",
+      "[2, 1, 1, np.float64(9.999000000000001e-05), np.float64(0.0), np.float64(0.0001), np.float64(1.0)]\n",
+      "[2, 2, 2, np.float64(9.999000000000001e-05), np.float64(0.0), np.float64(9.999000000000001e-05), np.float64(1.0)]\n",
+      "[2, 3, 1, np.float64(0.00019998000100000002), np.float64(0.0), np.float64(9.999000000000001e-05), np.float64(1.0)]\n",
+      "[2, 4, 2, np.float64(0.00019998000100000002), np.float64(0.0), np.float64(0.00019998000100000002), np.float64(1.0)]\n",
+      "\n",
+      "Resumo por época (ii): [epoch, r1x, r1y, r2x, r2y]\n",
+      "[1, np.float64(0.0001), np.float64(0.0), np.float64(0.0001), np.float64(1.0)]\n",
+      "[2, np.float64(0.00019998000100000002), np.float64(0.0), np.float64(0.00019998000100000002), np.float64(1.0)]\n",
+      "[3, np.float64(0.00029994000699960007), np.float64(0.0), np.float64(0.00029994000699960007), np.float64(1.0)]\n",
+      "[4, np.float64(0.0003998800219976002), np.float64(0.0), np.float64(0.0003998800219976002), np.float64(1.0)]\n",
+      "[5, np.float64(0.0004998000499920009), np.float64(0.0), np.float64(0.0004998000499920009), np.float64(1.0)]\n",
+      "[6, np.float64(0.0005997000949800031), np.float64(0.0), np.float64(0.0005997000949800031), np.float64(1.0)]\n",
+      "[7, np.float64(0.0006995801609580081), np.float64(0.0), np.float64(0.0006995801609580081), np.float64(1.0)]\n",
+      "[8, np.float64(0.0007994402519216181), np.float64(0.0), np.float64(0.0007994402519216181), np.float64(1.0)]\n",
+      "[9, np.float64(0.0008992803718656364), np.float64(0.0), np.float64(0.0008992803718656364), np.float64(1.0)]\n",
+      "[10, np.float64(0.000999100524784067), np.float64(0.0), np.float64(0.000999100524784067), np.float64(1.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ver o que foi guardado em i e ii\n",
+    "\n",
+    "# (i) primeiras 8 atualizações (duas primeiras de cada época, por exemplo)\n",
+    "print(\"Primeiras 8 atualizações (i): [epoch, idx, which, r1x, r1y, r2x, r2y]\")\n",
+    "for row in updates_history[:8]:\n",
+    "    print(row)\n",
+    "\n",
+    "# (ii) resumo por época\n",
+    "print(\"\\nResumo por época (ii): [epoch, r1x, r1y, r2x, r2y]\")\n",
+    "for row in epoch_summary:\n",
+    "    print(row)\n"
    ]
   }
  ],
