--- a/lab2/ex2.ipynb
+++ b/lab2/ex2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "10c796be",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2d301124",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "aeb2e5a5",
    "metadata": {},
    "outputs": [],
@@ -57,10 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ae950752",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pesos iniciais [w0, w1, w2]: [ 0.00304717 -0.01039984  0.00750451]\n",
+      "Somas s: [ 0.00304717  0.01055168 -0.00735267  0.00015184]\n",
+      "Saídas o: [0 0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# inicialização e cálculo das saídas\n",
     "w = rng.normal(loc=0.0, scale=1e-2, size=3)  # [w0, w1, w2] pequenos\n",
@@ -84,7 +94,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.9"
   }
  },
