--- a/lab2/ex2.ipynb
+++ b/lab2/ex2.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "009c96d8",
    "metadata": {},
    "outputs": [],
@@ -67,16 +67,36 @@
     "    return np.array(train_idx, dtype=int), np.array(test_idx, dtype=int)\n",
     "\n",
     "def knn_predict(X_train, y_train, X_test, k=3):\n",
+    "    \"\"\"k-NN prediction (baseado em GeeksforGeeks):\n",
+    "    - usa distância Euclidiana\n",
+    "    - votação majoritária entre os k vizinhos\n",
+    "    - em caso de empate entre classes, escolhe a classe do vizinho\n",
+    "      mais próximo entre os k (tie-break pelo vizinho mais próximo)\n",
+    "    \"\"\"\n",
     "    # distances: (n_test, n_train)\n",
     "    d = np.linalg.norm(X_test[:, None, :] - X_train[None, :, :], axis=2)\n",
     "    nn = np.argsort(d, axis=1)[:, :k]  # indices of k nearest\n",
     "    preds = []\n",
-    "    for neighbors in nn:\n",
-    "        votes = y_train[neighbors]\n",
-    "        cnt = Counter(votes)\n",
-    "        # majority vote with deterministic tie-break: smallest label\n",
-    "        pred = sorted(cnt.items(), key=lambda x: (-x[1], x[0]))[0][0]\n",
-    "        preds.append(pred)\n",
+    "    for i, neighbors in enumerate(nn):\n",
+    "        neigh_labels = y_train[neighbors]\n",
+    "        cnt = Counter(neigh_labels)\n",
+    "        # find classes with maximum votes\n",
+    "        max_votes = max(cnt.values())\n",
+    "        top_classes = [cls for cls, v in cnt.items() if v == max_votes]\n",
+    "        if len(top_classes) == 1:\n",
+    "            preds.append(top_classes[0])\n",
+    "            continue\n",
+    "        # tie-break: choose class of the nearest neighbor (smallest distance)\n",
+    "        distances = d[i, neighbors]\n",
+    "        # order neighbors by distance and pick first whose label is in top_classes\n",
+    "        order = np.argsort(distances)\n",
+    "        chosen = None\n",
+    "        for idx in order:\n",
+    "            lbl = neigh_labels[idx]\n",
+    "            if lbl in top_classes:\n",
+    "                chosen = lbl\n",
+    "                break\n",
+    "        preds.append(int(chosen))\n",
     "    return np.array(preds, dtype=int)\n",
     "\n",
     "def accuracy(y_true, y_pred):\n",
@@ -384,7 +404,7 @@
    "metadata": {},
    "source": [
     "### Exercício 2 — Alínea 3  \n",
-    "**Porque deve o valor de *k* ser ímpar (à luz da Fig. 3)?**\n",
+    "**Porque deve o valor de *k* ser ímpar (com base na Fig. 3)?**\n",
     "\n",
     "No algoritmo *k*-NN, cada ponto desconhecido é classificado segundo a **classe mais frequente**\n",
     "entre os *k* vizinhos mais próximos.\n",
@@ -396,8 +416,8 @@
     "- Se **k for ímpar**, garante-se que **há sempre uma maioria clara** entre as duas classes,\n",
     "evitando empates e tornando o processo de decisão determinístico.\n",
     "\n",
-    "> 💡 **Conclusão:**  \n",
-    "> Escolher *k* ímpar (por exemplo 3, 5, 7, 11…) evita empates em problemas binários e reduz a probabilidade de empate em problemas multiclasse, tornando o *k*-NN mais estável e previsível.\n"
+    " **Conclusão:**  \n",
+    "Escolher *k* ímpar (por exemplo 3, 5, 7, 11…) evita empates em problemas binários e reduz a probabilidade de empate em problemas multiclasse, tornando o *k*-NN mais estável e previsível.\n"
    ]
   }
  ],
