--- a/lab2/ex2.ipynb
+++ b/lab2/ex2.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "10c796be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports (sem scikit-learn)\n",
+    "# imports \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from collections import Counter\n",
-    "# Para reprodutibilidade\n",
+    "# random generator \n",
     "rng = np.random.default_rng(42)"
    ]
   },
@@ -31,12 +31,15 @@
     }
    ],
    "source": [
-    "# carregar dataset Iris sem scikit-learn (usando UCI CSV)\n",
-    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data'\n",
+    "# carregar dataset Iris (utilizando o UCI CSV)\n",
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data' \n",
     "cols = ['sepal_length','sepal_width','petal_length','petal_width','target_name']\n",
     "df = pd.read_csv(url, header=None, names=cols)\n",
-    "# remover linhas vazias (caso)\n",
+    "\n",
+    "# remover linhas vazias (caso hajam algumas)\n",
     "df = df.dropna().reset_index(drop=True)\n",
+    "\n",
+    "\n",
     "# map targets para inteiros 0,1,2\n",
     "class_names = sorted(df['target_name'].unique())\n",
     "target_map = {name:i for i,name in enumerate(class_names)}\n",
@@ -48,12 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "009c96d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (funções auxiliares)\n",
+    "# funções auxiliares\n",
     "def stratified_split_indices(y, test_size=0.3, random_state=None):\n",
     "    rng = np.random.default_rng(random_state)\n",
     "    train_idx = []\n",
@@ -67,13 +70,8 @@
     "    return np.array(train_idx, dtype=int), np.array(test_idx, dtype=int)\n",
     "\n",
     "def knn_predict(X_train, y_train, X_test, k=3):\n",
-    "    \"\"\"k-NN prediction (baseado em GeeksforGeeks):\n",
-    "    - usa distância Euclidiana\n",
-    "    - votação majoritária entre os k vizinhos\n",
-    "    - em caso de empate entre classes, escolhe a classe do vizinho\n",
-    "      mais próximo entre os k (tie-break pelo vizinho mais próximo)\n",
-    "    \"\"\"\n",
-    "    # distances: (n_test, n_train)\n",
+    "\n",
+    "    # distance: (n_test, n_train)\n",
     "    d = np.linalg.norm(X_test[:, None, :] - X_train[None, :, :], axis=2)\n",
     "    nn = np.argsort(d, axis=1)[:, :k]  # indices of k nearest\n",
     "    preds = []\n",
@@ -86,7 +84,7 @@
     "        if len(top_classes) == 1:\n",
     "            preds.append(top_classes[0])\n",
     "            continue\n",
-    "        # tie-break: choose class of the nearest neighbor (smallest distance)\n",
+    "        # empate: choose class of the nearest neighbor (smallest distance)\n",
     "        distances = d[i, neighbors]\n",
     "        # order neighbors by distance and pick first whose label is in top_classes\n",
     "        order = np.argsort(distances)\n",
@@ -114,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "2d301124",
    "metadata": {},
    "outputs": [
@@ -122,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\nicol\\AppData\\Local\\Temp\\ipykernel_32572\\3756909777.py:17: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\nicol\\AppData\\Local\\Temp\\ipykernel_25972\\3756909777.py:17: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  plt.boxplot(data, labels=[f'k={k}' for k in ks], showmeans=True)\n"
      ]
     },
@@ -162,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "aeb2e5a5",
    "metadata": {},
    "outputs": [
