--- a/lab2/ex4.ipynb
+++ b/lab2/ex4.ipynb
@@ -194,7 +194,8 @@
    "metadata": {},
    "source": [
     "### 4) \n",
-    "A melhor divisão (split) é aquela que produz a maior redução da entropia, isto é, o maior ganho de informação (Information Gain – IG). Assim, o atributo com maior IG é selecionado como nó raiz, pois é o que mais contribui para diminuir a incerteza sobre a classe. No caso do conjunto Iris, o atributo petal_length apresenta o maior ganho (≈ 0,9183), sendo, portanto, o melhor critério inicial para dividir os dados e distinguir Iris-setosa das restantes espécies."
+    "A melhor divisão (split) é aquela que produz a maior redução da entropia, isto é, o maior ganho de informação (Information Gain – IG). Assim, o atributo com maior IG é selecionado como nó raiz, pois é o que mais contribui para diminuir a incerteza sobre a classe. No caso do conjunto Iris, o atributo petal_length apresenta o maior ganho (≈ 0,9183), sendo, portanto, o melhor critério inicial para dividir os dados e distinguir Iris-setosa das restantes espécies.\n",
+    "O conjunto é então dividido consoante os valores de petal_length (low, medium, high), e o processo repete-se recursivamente nos subconjuntos, escolhendo sempre o atributo mais informativo até que os nós sejam puros ou não existam mais variáveis relevantes."
    ]
   }
  ],
