ex3 terminado, vou tentar perceber o ex2

--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -616,7 +616,7 @@
     "## Exercício 3\n",
     "Na função de avaliação (fitting), em vez de somar 1 para cada posição igual no padrão de teste e no padrão objetivo, podiamos somar o módulo da diferença entre o valor do padrão de teste e do padrão objetivo, sendo que neste caso, quanto menor o valor devolvido pela função de avaliação, melhor, sendo que para o valor 0, ambos os padrões são iguais.\n",
     "\n",
-    "Na função de mutação, ...\n",
+    "Na função de mutação, uma vez que cada posição pode assumir valores de 0 a 9 deixa de fazer sentido \"inverter\" o valor, pelo que invés disso, a mutação poderia aumentar ou diminuir o valor de um dígito, por exemplo +1 ou -1, garantindo que este fica entre 0 e 9. Por outro lado, outra opção seria trocar o dígito atual por um valor aleatório diferente (dentro do intervalo de 0 a 9).\n",
     "\n",
     "Na função de cruzamento, não é necessária qualquer alteração, pois o método atualmente utilizado não tem em conta o tipo de informação presente nos padrões."
    ]
