--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "6aacd0fd",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
     "            filho2[i] = melhor[i]\n",
     "    return filho1, filho2\n",
     "\n",
-    "# def cruzar_variavel(pai, mae):\n",
+    "# def cruzar_variavel(pai, mae):  # Primeira versão\n",
     "#     n = min(len(pai), len(mae))\n",
     "#     if n < 2:\n",
     "#         return pai, mae\n",
