--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -846,7 +846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IAAproj",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -860,7 +860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
