ex5 opcional feito

--- a/Projeto IAA/Projeto.ipynb
+++ b/Projeto IAA/Projeto.ipynb
@@ -17,32 +17,34 @@
    "id": "e2fc5e5f",
    "metadata": {},
    "source": [
-    "ESTRUTURA PROPOSTA:\n",
-    "1.Introdução\n",
+    "# ESTRUTURA PROPOSTA:\n",
     "\n",
-    "2.Business Understanding\n",
     "\n",
-    "3.Data Understanding\n",
-    " 3.1. Descrição\n",
-    " 3.2. EDA\n",
-    " 3.3. Correlações\n",
-    " 3.4. Qualidade dos dados\n",
+    "###    1. Introdução\n",
     "\n",
-    "4.Data Preparation\n",
-    " 4.1. Limpeza\n",
-    " 4.2. Transformações\n",
-    " 4.3. Feature Engineering\n",
+    "###    2. Business Understanding\n",
     "\n",
-    "5.Modeling\n",
-    " 5.1. Clustering\n",
-    " 5.2. Modelos de previsão\n",
-    " 5.3. Normalização\n",
+    "###    3. Data Understanding\n",
+    "#####  3.1. Descrição\n",
+    "#####  3.2. EDA\n",
+    "#####  3.3. Correlações\n",
+    "#####  3.4. Qualidade dos dados\n",
     "\n",
-    "6.Evaluation\n",
+    "###    4. Data Preparation\n",
+    "#####  4.1. Limpeza\n",
+    "#####  4.2. Transformações\n",
+    "#####  4.3. Feature Engineering\n",
     "\n",
-    "7.Conclusion\n",
+    "###    5. Modeling\n",
+    "#####  5.1. Clustering\n",
+    "#####  5.2. Modelos de previsão\n",
+    "#####  5.3. Normalização\n",
     "\n",
-    "8.Referências"
+    "###    6. Evaluation\n",
+    "\n",
+    "###    7. Conclusion\n",
+    "\n",
+    "###    8. References"
    ]
   },
   {
