Corrige pequena falha

--- a/Projeto IAA/Projeto.ipynb
+++ b/Projeto IAA/Projeto.ipynb
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "ba5ba241",
    "metadata": {},
    "outputs": [
@@ -863,7 +863,7 @@
        "└──────────────────────┴──────────────┴────────────────┴───────────┴───────────────┴───────────────┘"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d328d7b5",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duplicados removidos: 1230\n"
+      "Registos duplicados removidos: 1230\n"
      ]
     }
    ],
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "2f7e2a72",
    "metadata": {},
    "outputs": [
@@ -968,7 +968,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Potências inválidas removidas: 0\n"
+      "Registos com potências inválidas removidas: 0\n"
      ]
     }
    ],
@@ -990,13 +990,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5a2e0de9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registos sem potências: 0\n"
+     ]
+    }
+   ],
    "source": [
     "antes = prep_df.count().get_column(\"CPE\")[0]\n",
-    "prep_df.filter(~pl.all_horizontal(pl.all().is_null()))\n",
+    "prep_df = prep_df.filter(~pl.all_horizontal(pl.all().is_null()))\n",
     "depois = prep_df.count().get_column(\"CPE\")[0]\n",
     "\n",
     "print(\"Registos sem potências:\", antes - depois)"
