Resolve avisos e erros

--- a/Projeto IAA/Projeto.ipynb
+++ b/Projeto IAA/Projeto.ipynb
@@ -1026,18 +1026,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "ee345d5e",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\migue\\AppData\\Local\\Temp\\ipykernel_25364\\2271230552.py:51: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  .apply(lambda x: (x[\"PotActiva\"] < x[\"PotActiva\"].mean() * 0.5).sum())\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1110,7 +1102,7 @@
       "CPE                                          \n",
       "PT0002000032936306KX               0.985326  \n",
       "PT0002000032942455NH               0.643920  \n",
-      "PT0002000032959511HP                    NaN  \n",
+      "PT0002000032959511HP               0.000000  \n",
       "PT0002000032966446CC               0.881472  \n",
       "PT0002000032968749YT               0.414477  \n"
      ]
@@ -1160,17 +1152,18 @@
     "        \"mean\":\"daily_mean\",\n",
     "        \"std\":\"daily_std\"\n",
     "    })\n",
+    "    .reset_index()\n",
     ")\n",
     "\n",
     "# time_below50 \n",
     "time_below50 = (\n",
     "    prep_pdf.groupby([\"CPE\",\"date\"])\n",
-    "    .apply(lambda x: (x[\"PotActiva\"] < x[\"PotActiva\"].mean() * 0.5).sum())\n",
+    "    .apply(lambda x: (x[\"PotActiva\"] < x[\"PotActiva\"].mean() * 0.5).sum(), include_groups=False)\n",
     "    .reset_index(name=\"time_below50\")\n",
     ")\n",
     "\n",
     "# Juntar ao daily corretamente\n",
-    "daily = daily.reset_index().merge(time_below50, on=[\"CPE\",\"date\"]).set_index([\"CPE\",\"date\"])\n",
+    "daily = daily.merge(time_below50, on=[\"CPE\",\"date\"]).set_index([\"CPE\",\"date\"])\n",
     "\n",
     "#agregações por CPE\n",
     "daily_features = (\n",
@@ -1201,7 +1194,12 @@
     "weekly_ratio[\"weekend_weekday_ratio\"] = (\n",
     "    weekly_ratio[\"avg_weekend\"] / weekly_ratio[\"avg_weekday\"]\n",
     ")\n",
+    "weekly_ratio[\"weekend_weekday_ratio\"].fillna(0, inplace=True)\n",
     "\n",
+    "# Replace NaN with 0 only where there was a division by zero\n",
+    "# weekly_ratio[\"weekend_weekday_ratio\"] = np.where(\n",
+    "#     weekly_ratio[\"avg_weekday\"] == 0, 0, weekly_ratio[\"avg_weekend\"] / weekly_ratio[\"avg_weekday\"]\n",
+    "# )\n",
     "\n",
     "# LAG + ROLLING\n",
     "prep_pdf = prep_pdf.sort_values([\"CPE\",\"tstamp\"])\n",
@@ -2001,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "dc26f36a",
    "metadata": {},
    "outputs": [
@@ -2024,7 +2022,7 @@
     "kmeans = KMeans(n_clusters=best_k, random_state=42)\n",
     "cluster_labels = kmeans.fit_predict(feat_scaled)\n",
     "\n",
-    "feat_clust[\"cluster\"] = cluster_labels"
+    "feat_clust.loc[:, \"cluster\"] = cluster_labels"
    ]
   },
   {
